; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_machine_routines.c_machine_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_machine_routines.c_machine_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@is_clock_configured = common dso_local global i32 0, align 4
@debug_enabled = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @machine_init() #0 {
  %1 = call i32 (...) @debug_log_init()
  %2 = call i32 (...) @clock_config()
  %3 = load i32, i32* @TRUE, align 4
  store i32 %3, i32* @is_clock_configured, align 4
  %4 = load i64, i64* @debug_enabled, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = call i32 (...) @pmap_map_globals()
  br label %8

8:                                                ; preds = %6, %0
  ret void
}

declare dso_local i32 @debug_log_init(...) #1

declare dso_local i32 @clock_config(...) #1

declare dso_local i32 @pmap_map_globals(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
